✨ Implemented user registration/authentication with email
